--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
   <body class="black-skin bg-light">
     <div id="root"></div>
     <script type="module" src="./src/main.jsx"></script>
-    <script
-      type="text/javascript "
-      src="./src/js/jquery-3.4.1.min.js "
-    ></script>
-    <!-- Bootstrap tooltips -->
-    <script type="text/javascript " src="./src/js/popper.min.js"></script>
-    <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript " src="./src/js/bootstrap.min.js"></script>
-    <!-- MDB core JavaScript -->
-    <script type="text/javascript " src="./src/js/mdb.min.js"></script>
+    <!-- CDN for jQuery -->
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<!-- CDN for Popper.js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<!-- CDN for Bootstrap -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<!-- CDN for MDB -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.js"></script>
+
 
     <script>
       // MDB Lightbox Init
